-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9, 10, 11, 13, 14, 15, 16, 17
-
Component/s: tools
-
b17
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8285030 | 11.0.16-oracle | Adam Sotona | P2 | Closed | Fixed | b04 |
| JDK-8283314 | 11.0.16 | Olga Mikhaltcova | P2 | Resolved | Fixed | b01 |
# A fatal error has been detected by the Java Runtime Environment:
#
# EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x6e481942, pid=412232, tid=412852
#
# JRE version: (9.0) (build )
# Java VM: Java HotSpot(TM) Server VM (9-internal+0-2016-09-23-203306.amurillo.jdk9-hs-2016-09-19-snapshot, mixed mode, tiered, g1 gc, windows-x86)
# Problematic frame:
# C [jimage.dll+0x1942] ImageStrings::find+0x28
#
# No core dump will be written. Minidumps are not enabled by default on client versions of Windows
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dapplication.home=c:\users\aurora\CommonData\TEST_JAVA_HOME --add-modules=ALL-DEFAULT -Xms8m -XX:MaxRAMFraction=4 -Dtest.src=C:\Users\aurora\CommonData\j2se_jdk\jdk\test\closed\java\lang\invoke\8009424 -Dtest.src.path=C:\Users\aurora\CommonData\j2se_jdk\jdk\test\closed\java\lang\invoke\8009424 -Dtest.classes=C:\Users\aurora\sandbox\results\workDir\classes\0\closed\java\lang\invoke\8009424 -Dtest.class.path=C:\Users\aurora\sandbox\results\workDir\classes\0\closed\java\lang\invoke\8009424 -Dtest.vm.opts=-XX:MaxRAMFraction=4 -Dtest.tool.vm.opts=-J-XX:MaxRAMFraction=4 -Dtest.compiler.opts= -Dtest.java.opts=-Xcomp -server -XX:+CreateCoredumpOnCrash -XX:+IgnoreUnrecognizedVMOptions -XX:ReservedCodeCacheSize=256M -Xcomp -Dtest.jdk=c:\users\aurora\CommonData\TEST_JAVA_HOME -Dcompile.jdk=c:\users\aurora\CommonData\TEST_JAVA_HOME -Dtest.timeout.factor=16.0 -Dtest.modules=jdk.unsupported -Dtest.nativepath=C:\users\aurora\sandbox\JTREG_NATIVEPATH_LIBRARY_PREPARED -Djdk.module.main=jdk.compiler jdk.compiler/com.sun.tools.javac.Main @C:\Users\aurora\sandbox\results\workDir\closed\java\lang\invoke\8009424\TestRestrictedPackageAccess.d\compile.0.jta
Host: Intel(R) Xeon(R) CPU X5670 @ 2.93GHz, 2 cores, 3G, Windows 8.1 Build 9600 (6.3.9600.17415)
Time: Sun Sep 25 04:11:26 2016 ric elapsed time: 6 seconds (0d 0h 0m 6s)
--------------- T H R E A D ---------------
Current thread (0x010ce400): JavaThread "Unknown thread" [_thread_in_vm, id=412852, stack(0x01050000,0x010a0000)]
Stack: [0x01050000,0x010a0000], sp=0x0109e2a8, free space=312k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
C [jimage.dll+0x1942] ImageStrings::find+0x28;; ?find@ImageStrings@@SAHPAVEndian@@PBDPAHI@Z+0x28
C [jimage.dll+0x1a48] ImageFileReader::find_location_index+0x37;; ?find_location_index@ImageFileReader@@QBEIPBDPA_K@Z+0x37
C 0x00000000
siginfo: EXCEPTION_ACCESS_VIOLATION (0xc0000005), reading address 0x0001c71c;;
Registers:
EAX=0x00004815, EBX=0x0109e33c, ECX=0x6e485000, EDX=0x000071c0
ESP=0x0109e2a8, EBP=0x0109e2ac, ESI=0x00000002, EDI=0x0000001c
EIP=0x6e481942, EFLAGS=0x00010246
Top of Stack: (sp=0x0109e2a8)
0x0109e2a8: 010cd9a0 0109f378 6e481a48 6e485000
0x0109e2b8: 0109e33c 0000001c 00009628 00000016
0x0109e2c8: 010ce8b0 5f7ac69e 0109e33c 0000003a
0x0109e2d8: 0109e5a0 0109e300 77a7e20e 010b5290
0x0109e2e8: 0109e360 0000003a 0109e5a8 00000000
0x0109e2f8: 0109e5a0 010b5290 00000002 00000016
0x0109e308: 6e482315 0109e33e 010ce8b0 b88f5877
0x0109e318: 6e482339 0109e33c 0109f378 010ce8b0
Instructions: (pc=0x6e481942)
0x6e481922: ff 74 48 83 7d 14 00 74 42 68 93 01 00 01 ff 75
0x6e481932: 0c e8 08 03 00 00 33 d2 f7 75 14 59 59 8b 4d 08
0x6e481942: ff 34 97 8b 01 ff 50 04 8b c8 85 c9 7e 14 51 ff
0x6e481952: 75 0c e8 e7 02 00 00 33 d2 f7 75 14 59 59 8b c2
(*****) Only runs on Solaris or Linux
;;
- backported by
-
JDK-8283314 javac crashed: [jimage.dll+0x1942] ImageStrings::find+0x28
-
- Resolved
-
-
JDK-8285030 javac crashed: [jimage.dll+0x1942] ImageStrings::find+0x28
-
- Closed
-
- relates to
-
JDK-8261916 gtest/GTestWrapper.java vmErrorTest.unimplemented1_vm_assert failed
-
- Resolved
-
-
JDK-8207138 vmTestbase/nsk/coverage/jni/jni005/TestDescription.java crashed in libjimage.so
-
- Closed
-
-
JDK-8244744 SIGSEGV in ImagesStrings::find() at VM shutdown (gtestlauncher)
-
- Closed
-
- links to
-
Commit
openjdk/jdk11u-dev/62afe2eb
-
Commit
openjdk/jdk/a8005efd
-
Review
openjdk/jdk11u-dev/896
-
Review
openjdk/jdk/3304