8166727: javac crashed: [jimage.dll+0x1942] ImageStrings::find+0x28